--- a/css/styles.css
+++ b/css/styles.css
@@ -523,15 +523,20 @@ blockquote.short {
     line-height: 1.875;
 }
 
-/* Code. */
+/*
+ * Code.
+ * 1. Use ems not rems for code, so it grows and shrinks proportionally when
+ *    used in subheadings and footnotes.
+ */
 code,
 var,
 kbd,
 samp {
     padding: 0.2em;
-    font-size: 16px;
-    font-size: 0.88889rem;
-    line-height: 0.9375;
+    font-size: 0.88889em;
+    /* 1 */
+    line-height: 1.875;
+    /* 1 */
     font-family: "Source Code Pro", Monaco, "Lucida Console", Inconsolata, Courier, monospace;
     background-color: #c4cbcb; 
     color: #222;
@@ -981,6 +986,8 @@ figure.output + figure.code code:before {
     padding-left: 0;
 }
 .footnotes li {
+    margin-bottom: 30px;
+    margin-bottom: 1.66667rem;
     list-style-position: inside;
     font-size: 16px;
     font-size: 0.88889rem;
@@ -1001,6 +1008,8 @@ figure.output + figure.code code:before {
     margin-left: 0.83333rem;
 }
 .footnotes li li {
+    margin-bottom: 15px;
+    margin-bottom: 0.83333rem;
     margin-left: 15px;
     margin-left: 0.83333rem;
     list-style-position: outside;
